--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=postgres;Port=5432;Database=book-my-event;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=postgres;Port=5432;Username=postgres;Password=123456;Database=book-my-event"
   },
   "Serilog": {
     "Using": [
