--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -1,12 +1,34 @@
 {
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": ""
+    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=123456s;Database=book-my-event"
+
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": {
+          "ServerUrl": "http://seq" // no port needed since docker exposes seq on port 80 internally
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "Jwt": {
-    "Secret": "",
-    "Issuer": "",
-    "Audience": "",
-    "ExpirationInMinutes": 0
+    "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
+    "Issuer": "clean-architecture",
+    "Audience": "developers",
+    "ExpirationInMinutes": 60
   }
 }
