--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -22,6 +22,9 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
+  "OpenIddict": {
+    "SwaggerRedirectUri": "https://localhost:5001/swagger/oauth2-redirect.html"
+  },
   "Jwt": {
     "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
     "Issuer": "clean-architecture",
