--- a/.editorconfig
+++ b/.editorconfig
@@ -21,23 +21,23 @@ dotnet_separate_import_directive_groups = false
 dotnet_sort_system_directives_first = true
 
 # this. and Me. preferences
-dotnet_style_qualification_for_event = false:error
-dotnet_style_qualification_for_field = false:error
-dotnet_style_qualification_for_method = false:error
-dotnet_style_qualification_for_property = false:error
+dotnet_style_qualification_for_event = false:suggestion
+dotnet_style_qualification_for_field = false:suggestion
+dotnet_style_qualification_for_method = false:suggestion
+dotnet_style_qualification_for_property = false:suggestion
 
 # Language keywords vs BCL types preferences
-dotnet_style_predefined_type_for_locals_parameters_members = true:error
-dotnet_style_predefined_type_for_member_access = true:error
+dotnet_style_predefined_type_for_locals_parameters_members = true:warning
+dotnet_style_predefined_type_for_member_access = true:warning
 
 # Parentheses preferences
-dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:error
-dotnet_style_parentheses_in_other_binary_operators = never_if_unnecessary:error
-dotnet_style_parentheses_in_other_operators = never_if_unnecessary:error
-dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:error
+dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:suggestion
+dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:suggestion
+dotnet_style_parentheses_in_other_operators = never_if_unnecessary:suggestion
+dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:suggestion
 
 # Modifier preferences
-dotnet_style_require_accessibility_modifiers = for_non_interface_members:error
+dotnet_style_require_accessibility_modifiers = for_non_interface_members:warning
 
 # Expression-level preferences
 dotnet_style_coalesce_expression = true:suggestion
@@ -50,13 +50,13 @@ dotnet_style_prefer_compound_assignment = true:suggestion
 dotnet_style_prefer_conditional_expression_over_assignment = true:suggestion
 dotnet_style_prefer_conditional_expression_over_return = true:none
 dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
-dotnet_style_prefer_inferred_tuple_names = true:error
-dotnet_style_prefer_is_null_check_over_reference_equality_method = true:error
+dotnet_style_prefer_inferred_tuple_names = true:warning
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:warning
 csharp_indent_labels = one_less_than_current
-csharp_using_directive_placement = outside_namespace:error
-csharp_prefer_simple_using_statement = true:error
+csharp_using_directive_placement = outside_namespace:warning
+csharp_prefer_simple_using_statement = true:warning
 csharp_prefer_braces = false:suggestion
-csharp_style_namespace_declarations = file_scoped:error
+csharp_style_namespace_declarations = block_scoped:suggestion
 csharp_style_prefer_method_group_conversion = true:suggestion
 csharp_style_prefer_top_level_statements = true:suggestion
 csharp_style_prefer_primary_constructors = true:suggestion
@@ -78,19 +78,19 @@ csharp_new_line_before_members_in_anonymous_types = false
 csharp_new_line_between_query_expression_clauses = true
 csharp_space_after_keywords_in_control_flow_statements = false
 csharp_space_after_semicolon_in_for_statement = false
-csharp_preserve_single_line_blocks = false
+csharp_preserve_single_line_blocks = true
 csharp_indent_case_contents = false
 csharp_indent_case_contents_when_block = false
 csharp_indent_switch_labels = false
-csharp_new_line_before_open_brace = none
+csharp_new_line_before_open_brace = methods, types, control_blocks, lambdas
 csharp_style_prefer_local_over_anonymous_function = true:suggestion
-csharp_prefer_simple_default_expression = true:error
+csharp_prefer_simple_default_expression = true:warning
 csharp_style_prefer_null_check_over_type_check = true:suggestion
 csharp_style_throw_expression = true:suggestion
 csharp_style_unused_value_expression_statement_preference = discard_variable:none
 csharp_style_unused_value_assignment_preference = discard_variable:silent
 csharp_style_deconstructed_variable_declaration = true:suggestion
-csharp_style_inlined_variable_declaration = true:error
+csharp_style_inlined_variable_declaration = true:warning
 csharp_style_prefer_utf8_string_literals = true:suggestion
 csharp_style_prefer_unbound_generic_type_in_nameof = true:suggestion
 csharp_style_prefer_tuple_swap = true:suggestion
@@ -101,17 +101,17 @@ csharp_style_allow_embedded_statements_on_same_line_experimental = true:silent
 csharp_style_prefer_readonly_struct_member = true:suggestion
 csharp_style_prefer_readonly_struct = true:suggestion
 csharp_prefer_static_anonymous_function = true:suggestion
-csharp_prefer_static_local_function = true:error
+csharp_prefer_static_local_function = true:warning
 csharp_style_pattern_matching_over_is_with_cast_check = true:suggestion
 csharp_style_prefer_pattern_matching = true:silent
 csharp_style_prefer_switch_expression = true:suggestion
-csharp_style_conditional_delegate_call = true:error
+csharp_style_conditional_delegate_call = true:warning
 csharp_style_allow_blank_line_after_token_in_arrow_expression_clause_experimental = true:silent
 csharp_style_allow_blank_line_after_token_in_conditional_expression_experimental = true:silent
 csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true:silent
 csharp_style_allow_blank_lines_between_consecutive_braces_experimental = true:silent
 csharp_style_pattern_matching_over_as_with_null_check = true:suggestion
-csharp_style_var_elsewhere = false:suggestion
+csharp_style_var_elsewhere = true:suggestion
 csharp_style_var_when_type_is_apparent = true:suggestion
 csharp_style_var_for_built_in_types = true:suggestion
 csharp_style_prefer_extended_property_pattern = true:suggestion
@@ -124,7 +124,7 @@ dotnet_style_prefer_simplified_interpolation = true:suggestion
 dotnet_style_namespace_match_folder = true:suggestion
 
 # Field preferences
-dotnet_style_readonly_field = true:error
+dotnet_style_readonly_field = true:warning
 
 # Parameter preferences
 dotnet_code_quality_unused_parameters = all:none
@@ -132,44 +132,44 @@ dotnet_code_quality_unused_parameters = all:none
 #### C# Coding Conventions ####
 
 # Namespace preferences
-csharp_style_namespace_declarations= file_scoped:error
+csharp_style_namespace_declarations= block_scoped:suggestion
 
 # var preferences
-csharp_style_var_elsewhere = false:error
-csharp_style_var_for_built_in_types = false:error
-csharp_style_var_when_type_is_apparent = true:error
+csharp_style_var_elsewhere = true:suggestion
+csharp_style_var_for_built_in_types = true:suggestion
+csharp_style_var_when_type_is_apparent = true:suggestion
 
 # Expression-bodied members
-csharp_style_expression_bodied_accessors = true:error
+csharp_style_expression_bodied_accessors = true:suggestion
 csharp_style_expression_bodied_constructors = false:silent
-csharp_style_expression_bodied_indexers = true:error
-csharp_style_expression_bodied_lambdas = true:error
-csharp_style_expression_bodied_local_functions = true:error
+csharp_style_expression_bodied_indexers = true:warning
+csharp_style_expression_bodied_lambdas = true:warning
+csharp_style_expression_bodied_local_functions = true:warning
 csharp_style_expression_bodied_methods = false:silent
-csharp_style_expression_bodied_operators = true:error
-csharp_style_expression_bodied_properties = true:error
+csharp_style_expression_bodied_operators = true:warning
+csharp_style_expression_bodied_properties = true:suggestion
 
 # Pattern matching preferences
-csharp_style_pattern_matching_over_as_with_null_check = true:error
-csharp_style_pattern_matching_over_is_with_cast_check = true:error
-csharp_style_prefer_switch_expression = true:error
+csharp_style_pattern_matching_over_as_with_null_check = true:warning
+csharp_style_pattern_matching_over_is_with_cast_check = true:warning
+csharp_style_prefer_switch_expression = true:warning
 
 # Null-checking preferences
-csharp_style_conditional_delegate_call = true:error
+csharp_style_conditional_delegate_call = true:warning
 
 # Modifier preferences
-csharp_prefer_static_local_function = true:error
+csharp_prefer_static_local_function = true:warning
 csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async
 
 # Code-block preferences
 csharp_prefer_braces = false:suggestion
-csharp_prefer_simple_using_statement = true:error
+csharp_prefer_simple_using_statement = true:warning
 
 # Expression-level preferences
 csharp_prefer_simple_default_expression = true:error
 csharp_style_deconstructed_variable_declaration = true:suggestion
-csharp_style_inlined_variable_declaration = true:error
-csharp_style_pattern_local_over_anonymous_function = true:error
+csharp_style_inlined_variable_declaration = true:warning
+csharp_style_pattern_local_over_anonymous_function = true:warning
 csharp_style_prefer_index_operator = true:suggestion
 csharp_style_prefer_range_operator = true:suggestion
 csharp_style_throw_expression = true:suggestion
@@ -179,7 +179,7 @@ csharp_style_prefer_method_group_conversion = true:silent
 csharp_style_prefer_top_level_statements = true:silent
 
 # 'using' directive preferences
-csharp_using_directive_placement = outside_namespace:error
+csharp_using_directive_placement = outside_namespace:warning
 
 #### C# Formatting Rules ####
 
@@ -189,7 +189,7 @@ csharp_new_line_before_else =true
 csharp_new_line_before_finally =true
 csharp_new_line_before_members_in_anonymous_types = false,
 csharp_new_line_before_members_in_object_initializers = false,
-csharp_new_line_before_open_brace = all
+csharp_new_line_before_open_brace = methods, types, control_blocks, lambdas
 csharp_new_line_between_query_expression_clauses = true
 
 # Indentation preferences
@@ -399,6 +399,15 @@ dotnet_diagnostic.CS8618.severity = none
 # IDE0005
 dotnet_diagnostic.IDE0005.severity = none
 
+# IDE0025: Use auto-implemented property
+dotnet_diagnostic.IDE0025.severity = none
+
+# IDE0032: Use auto property
+dotnet_diagnostic.IDE0032.severity = none
+
+# IDE0035: Use expression body for lambda expression
+dotnet_diagnostic.IDE0035.severity = none
+
 # IDE0046: Convert to conditional expression
 dotnet_diagnostic.IDE0046.severity = none
 
@@ -462,28 +471,28 @@ tab_width = 4
 indent_size = 4
 end_of_line = crlf
 dotnet_style_coalesce_expression = true:suggestion
-dotnet_style_null_propagation = true:error
+dotnet_style_null_propagation = true:suggestion
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
 dotnet_style_prefer_auto_properties = true:warning
 insert_final_newline = false
-dotnet_style_object_initializer = true:error
+dotnet_style_object_initializer = true:suggestion
 dotnet_style_prefer_conditional_expression_over_return = false:suggestion
 dotnet_style_prefer_conditional_expression_over_assignment = false:suggestion
-dotnet_style_collection_initializer = true:error
+dotnet_style_collection_initializer = true:suggestion
 dotnet_style_prefer_collection_expression = when_types_loosely_match:suggestion
-dotnet_style_prefer_compound_assignment = true:error
-dotnet_style_prefer_inferred_anonymous_type_member_names = true:error
-dotnet_style_prefer_inferred_tuple_names = true:error
-dotnet_style_explicit_tuple_names = true:error
-dotnet_style_predefined_type_for_member_access = true:error
-dotnet_style_predefined_type_for_locals_parameters_members = true:error
-dotnet_style_require_accessibility_modifiers = for_non_interface_members:error
+dotnet_style_prefer_compound_assignment = true:suggestion
+dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
+dotnet_style_prefer_inferred_tuple_names = true:suggestion
+dotnet_style_explicit_tuple_names = true:suggestion
+dotnet_style_predefined_type_for_member_access = true:warning
+dotnet_style_predefined_type_for_locals_parameters_members = true:warning
+dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggestion
 dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
 dotnet_style_allow_multiple_blank_lines_experimental = true:silent
 dotnet_style_parentheses_in_other_operators = never_if_unnecessary:suggestion
-dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:suggestion
-dotnet_style_parentheses_in_other_binary_operators = never_if_unnecessary:suggestion
-dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:suggestion
+dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:suggestion
+dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:suggestion
+dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:suggestion
 dotnet_style_qualification_for_event = false:suggestion
 dotnet_style_qualification_for_method = false:suggestion
 dotnet_style_qualification_for_property = false:suggestion
