--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Users\ValueObjects\" />
+  </ItemGroup>
+
 </Project>
