--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -23,7 +23,9 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "OpenIddict": {
-    "SwaggerRedirectUri": "https://localhost:5001/swagger/oauth2-redirect.html"
+    "WebAppRedirectUri": "https://localhost:5001/signin-oidc",
+    "MobileRedirectUri": "myapp://callback",
+    "ApiRedirectUri": "https://localhost:5001/swagger/oauth2-redirect.html"
   },
   "Jwt": {
     "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
