--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,8 @@ services:
       context: .
       dockerfile: src/Auth/Dockerfile
     ports:
-      - 6000:8080
-      - 6001:8081
+      - 5002:8080
+      - 5003:8081
     depends_on:
       - postgres-auth
     networks:
@@ -69,14 +69,18 @@ services:
       - bookmyevent-network
 
   pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: bookmyevent@ai.com
-      PGADMIN_DEFAULT_PASSWORD: bookmyevent
-    ports:
-      - "8080:80"
-    networks:
-      - bookmyevent-network
+   image: dpage/pgadmin4
+   environment:
+    PGADMIN_DEFAULT_EMAIL: bookmyevent@ai.com
+    PGADMIN_DEFAULT_PASSWORD: bookmyevent
+    PGADMIN_CONFIG_SERVER_MODE: 'False'
+   volumes:
+    - ./pgadmin/servers.json:/pgadmin4/servers.json
+   ports:
+    - "8080:80"
+   networks:
+    - bookmyevent-network
+
 
 networks:
   bookmyevent-network:
