--- a/src/Auth/appsettings.json
+++ b/src/Auth/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=123456;Database=book-my-event-auth"
+    "DefaultConnection": "Host=postgres-auth;Port=5433;Username=postgres;Password=123456;Database=book-my-event-auth"
 
   },
   "AllowedHosts": "*",
