--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -23,11 +23,18 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
-  "OpenIddict": {
-    "WebAppRedirectUri": "https://localhost:5001/signin-oidc",
-    "MobileRedirectUri": "myapp://callback",
-    "ApiRedirectUri": "https://localhost:5001/swagger/oauth2-redirect.html"
+  "Services": {
+    "Auth": {
+      "BaseUrl": "https://localhost:7210"
+    },
+    "WebApi": {
+      "BaseUrl": "https://localhost:7212"
+    },
+    "ReactClient": {
+      "BaseUrl": "http://localhost:7216"
+    }
   },
+
   "Jwt": {
     "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
     "Issuer": "clean-architecture",
