--- a/src/Auth/appsettings.json
+++ b/src/Auth/appsettings.json
@@ -6,25 +6,20 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres-auth;Port=5433;Username=postgres;Password=123456;Database=book-my-event-auth"
+    "DefaultConnection": "Host=postgres-auth;Port=5432;Username=postgres;Password=123456;Database=book-my-event-auth"
 
   },
   "AllowedHosts": "*",
-  "service": {
-    "auth": {
-      "host": "localhost",
-      "port": 7210,
-      "protocol": "https"
+  "Services": {
+    "Auth": {
+      "BaseUrl": "https://localhost:7210"
     },
-    "web-api": {
-      "host": "localhost",
-      "port": 7212,
-      "protocol": "https"
+    "WebApi": {
+      "BaseUrl": "https://localhost:7212"
     },
-    "react-client": {
-      "host": "localhost",
-      "port": 7216,
-      "protocol": "http"
+    "ReactClient": {
+      "BaseUrl": "http://localhost:7216"
     }
   }
-  }
+
+}
