--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Database\Factory\" />
+    <Folder Include="Database\Seed\" />
     <Folder Include="DomainEvents\" />
     <Folder Include="Database\Migrations\" />
   </ItemGroup>
