--- a/src/Auth/Auth.csproj
+++ b/src/Auth/Auth.csproj
@@ -7,21 +7,19 @@
     <UserSecretsId>2e9e6979-3d6d-487d-9bb2-80270e85cb57</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
-	  <!--<EnableNETAnalyzers>false</EnableNETAnalyzers>-->
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
-    <PackageReference Include="Microsoft.CodeAnalysis" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers">
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.Common" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
     <PackageReference Include="Microsoft.Extensions.Configuration" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
@@ -38,8 +36,10 @@
     <PackageReference Include="OpenIddict.Validation" />
     <PackageReference Include="Quartz" />
     <PackageReference Include="Quartz.AspNetCore" />
-	 
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
+	  <PackageReference Include="Humanizer" />
+	  <PackageReference Include=" Microsoft.VisualStudio.Web.CodeGeneration.Design" />
+
+	  <!--<PackageReference Include="Microsoft.EntityFrameworkCore.Design" />-->
   </ItemGroup>
 
   <ItemGroup>
