--- a/src/Auth/appsettings.json
+++ b/src/Auth/appsettings.json
@@ -6,19 +6,19 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres-auth;Port=5432;Username=postgres;Password=123456;Database=book-my-event-auth"
+    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=123456;Database=book-my-event-auth"
 
   },
   "AllowedHosts": "*",
   "Services": {
     "Auth": {
-      "BaseUrl": "https://localhost:7210"
+      "BaseUrl": "https://localhost:7216"
     },
     "WebApi": {
-      "BaseUrl": "https://localhost:7212"
+      "BaseUrl": "https://localhost:5001"
     },
     "ReactClient": {
-      "BaseUrl": "http://localhost:7216"
+      "BaseUrl": "https://localhost:7220"
     }
   }
 
