--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -35,6 +35,7 @@
     <PackageVersion Include="OpenIddict.Server.AspNetCore" Version="7.2.0" />
     <PackageVersion Include="OpenIddict.Validation" Version="7.2.0" />
     <PackageVersion Include="OpenIddict.Validation.AspNetCore" Version="7.2.0" />
+    <PackageVersion Include="OpenIddict.Validation.SystemNetHttp" Version="7.2.0" />
     <PackageVersion Include="Quartz" Version="3.15.1" />
     <PackageVersion Include="Quartz.AspNetCore" Version="3.15.1" />
     <!--<PackageVersion Include="SonarAnalyzer.CSharp" Version="10.15.0.120848" />-->
