--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Devotee\Entities\" />
+    <Folder Include="Pandit\Root\" />
     <Folder Include="Users\ValueObjects\" />
   </ItemGroup>
 
