--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Configurations\Users\" />
     <Folder Include="Database\Factory\" />
     <Folder Include="Database\Seed\" />
     <Folder Include="Database\Migrations\" />
