upgrade project to .net 10

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
   </ItemGroup>
 
   <ItemGroup>
