--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,7 @@ services:
 
   pgadmin:
    image: dpage/pgadmin4
+   container_name: pgadmin
    environment:
     PGADMIN_DEFAULT_EMAIL: bookmyevent@ai.com
     PGADMIN_DEFAULT_PASSWORD: bookmyevent
