--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres-api;Port=5432;Username=postgres;Password=123456;Database=book-my-event"
+    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=123456;Database=book-my-event"
 
   },
   "Serilog": {
