added validation fix in OpenIddict

--- a/src/Auth/Auth.csproj
+++ b/src/Auth/Auth.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="OpenIddict.EntityFrameworkCore" />
     <PackageReference Include="OpenIddict.Quartz" />
     <PackageReference Include="OpenIddict.Server" />
+    <PackageReference Include="OpenIddict.Server.AspNetCore" />
     <PackageReference Include="OpenIddict.Validation" />
     <PackageReference Include="Quartz" />
 
