--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -32,13 +32,10 @@
     },
     "ReactClient": {
       "BaseUrl": "http://localhost:7220"
-    }
-  },
+    },
+    "Audience": "web-api"
 
-  "Jwt": {
-    "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
-    "Issuer": "clean-architecture",
-    "Audience": "developers",
-    "ExpirationInMinutes": 60
   }
+
+  
 }
